<resources>
    <string name="app_name">MSE App</string>

    <string name="main_title">Multi Small Exercises</string>

    <string name="project1_title">User Input Exercise</string>
    <string name="enter_btn">Enter</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="age_hint">Age</string>
    <string name="gender_hint">Gender</string>

    <string name="project2_title">Payroll Calculator</string>
    <string name="full_time_title">Full Time</string>
    <string name="part_time_title">Part Time</string>
    <string name="go">Go</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="input">Input</string>
    <string name="shared_preferences_text">text</string>
    <string name="simple_music_player">Simple Music Player</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="data_passing_in_activities">Data Passing Between Activities</string>
</resources>