<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleMusicPlayer"
    android:background="@color/prussianBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_music_player"
        android:textColor="@color/parchment"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/playMusic"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/steelBlue"
            android:padding="8dp"
            android:text="@string/play"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/parchment"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" />

        <Button
            android:id="@+id/pauseMusic"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/steelBlue"
            android:padding="8dp"
            android:text="@string/pause"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/parchment"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

        <Button
            android:id="@+id/stopMusic"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/steelBlue"
            android:padding="8dp"
            android:text="@string/stop"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/parchment"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" />


    </LinearLayout>
</RelativeLayout>