<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/prussianBlue">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_title"
        android:textColor="@color/parchment"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/projectTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/project1_title"
        android:textColor="@color/parchment"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <Button
        android:id="@+id/project1Btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/go"
        app:layout_constraintStart_toStartOf="@+id/projectTitle1"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle1"
        android:onClick="goToUserInput"
        android:textColor="@color/parchment"
        android:backgroundTint="@color/steelBlue"/>

    <TextView
        android:id="@+id/projectTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/project2_title"
        android:textColor="@color/parchment"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/projectTitle1"
        app:layout_constraintTop_toBottomOf="@+id/project1Btn1" />

    <Button
        android:id="@+id/projectBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/steelBlue"
        android:onClick="goToPayroll"
        android:text="@string/go"
        android:textColor="@color/parchment"
        app:layout_constraintStart_toStartOf="@+id/projectTitle2"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle2" />

    <TextView
        android:id="@+id/projectTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/shared_preferences"
        android:textColor="@color/parchment"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/projectTitle1"
        app:layout_constraintTop_toBottomOf="@+id/projectBtn2" />

    <Button
        android:id="@+id/projectBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/steelBlue"
        android:onClick="goToSharedPreferences"
        android:text="@string/go"
        android:textColor="@color/parchment"
        app:layout_constraintStart_toStartOf="@+id/projectTitle2"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle3" />

    <TextView
        android:id="@+id/projectTitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/simple_music_player"
        android:textColor="@color/parchment"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/projectTitle1"
        app:layout_constraintTop_toBottomOf="@+id/projectBtn3" />

    <Button
        android:id="@+id/projectBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/steelBlue"
        android:onClick="goToMusicPlayer"
        android:text="@string/go"
        android:textColor="@color/parchment"
        app:layout_constraintStart_toStartOf="@+id/projectTitle3"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle4" />

</androidx.constraintlayout.widget.ConstraintLayout>