<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInputActivity"
    android:background="@color/prussianBlue">

    <LinearLayout
        android:id="@+id/inputsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="last name"
            android:ems="16"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:textColor="@color/parchment"
            android:textColorHint="@color/parchment"
            android:backgroundTint="@color/parchment"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="first name"
            android:ems="16"
            android:hint="@string/first_name_hint"
            android:inputType="text"
            android:textColor="@color/parchment"
            android:textColorHint="@color/parchment"
            android:backgroundTint="@color/parchment"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="age"
            android:ems="16"
            android:hint="@string/age_hint"
            android:inputType="text"
            android:textColor="@color/parchment"
            android:textColorHint="@color/parchment"
            android:backgroundTint="@color/parchment"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/genderEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="gender"
            android:ems="16"
            android:hint="@string/gender_hint"
            android:inputType="text"
            android:textColor="@color/parchment"
            android:textColorHint="@color/parchment"
            android:backgroundTint="@color/parchment"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/inputsLayout"
        android:layout_marginBottom="32dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Full Name: "
            android:textSize="16dp"
            android:textColor="@color/parchment"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age: "
                android:layout_weight="1"
                android:textSize="16dp"
                android:textColor="@color/parchment"/>

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender: "
                android:layout_weight="1"
                android:textSize="16dp"
                android:textColor="@color/parchment" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="enterOnClick"
        android:text="@string/enter_btn"
        android:layout_below="@id/inputsLayout"
        android:layout_marginTop="32dp"
        android:textColor="@color/parchment"
        android:backgroundTint="@color/steelBlue"/>

</RelativeLayout>